--- a/index.html
+++ b/index.html
@@ -1,29 +1,56 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>DVDS Availability</title>
-  <link rel="icon"
-        href='data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64"><rect width="64" height="64" rx="12" ry="12" fill="white"/><text x="50%" y="52%" font-size="40" text-anchor="middle" dominant-baseline="central">🚘</text></svg>' />
-  <style>
-    body { font: 16px system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif; margin: 24px; line-height: 1.5; }
-    select, button, a { padding: 8px 12px; font: inherit; }
-    #location { min-width: 240px; }
-    #open { display: none; margin-top: 16px; background: #0050b3; color: #fff; border-radius: 6px; text-decoration: none; }
-    #open:hover { background: #003f8f; }
-    pre { background: #f5f5f5; padding: 12px; border-radius: 8px; overflow: auto; white-space: pre-wrap; }
-    .muted { color: #667; }
-  </style>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>DVDS Availability</title>
+<style>
+  :root{ --ink:#0b1320; --muted:#64748b; --ring:#e2e8f0; --brand:#34b16a; }
+  body{ font-family: ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto; color:var(--ink); margin:24px; }
+  h1{ font-size: 2.2rem; margin:0 0 8px; }
+  .row{ display:flex; gap:12px; align-items:center; flex-wrap:wrap; }
+  select{ padding:10px 12px; border:1px solid var(--ring); border-radius:8px; font-size:1rem; }
+  #book{ display:none; margin-left:auto; text-decoration:none; padding:10px 14px; border-radius:10px; background:var(--brand); color:white; }
+  #status{ font-weight:700; margin:12px 0; }
+  .calwrap{ margin-top:16px; border:1px solid var(--ring); border-radius:14px; overflow:hidden; }
+  .calhdr{ display:flex; align-items:center; justify-content:space-between; padding:10px 12px; background:#f8fafc; border-bottom:1px solid var(--ring); }
+  .navbtn{ border:1px solid var(--ring); background:white; border-radius:10px; padding:6px 10px; cursor:pointer; }
+  .navbtn:disabled{ opacity:.4; cursor:not-allowed; }
+  .grid{ display:grid; grid-template-columns:repeat(7,1fr); gap:1px; background:var(--ring); }
+  .dow,.cell{ background:white; padding:10px; min-height:64px; }
+  .dow{ font-size:.8rem; color:var(--muted); text-align:center; background:#f1f5f9; }
+  .cell{ position:relative; }
+  .date{ font-size:.9rem; color:var(--muted); }
+  .has{ position:absolute; right:8px; bottom:8px; font-size:.75rem; color:#16a34a; }
+  .muted{ color:#cbd5e1; }
+  .disabled{ color:#cbd5e1; pointer-events:none; }
+  .skeleton{ background:linear-gradient(90deg,#f8fafc,#eef2f7,#f8fafc); background-size:200% 100%; animation:sh 1.2s infinite; }
+  @keyframes sh{ 0%{background-position:0% 0;} 100%{background-position:200% 0;} }
+  #times{ margin-top:16px; border:1px dashed var(--ring); padding:12px; border-radius:12px; white-space:pre-wrap; }
+</style>
 </head>
 <body>
   <h1>DVDS Availability</h1>
-  <p class="muted">If the dropdown fills and availability renders, the Acuity APIs and JSON configs are healthy.</p>
-  <p><strong>Status:</strong> <span id="status">Booting…</span></p>
-  <label for="location">Location</label>
-  <select id="location" disabled></select>
-  <p><a id="open" href="#" rel="noopener" target="_blank">Book now</a></p>
-  <pre id="out" class="muted">Select a location to view availability.</pre>
+  <p>If the dropdown fills and availability renders, the Acuity APIs and JSON configs are healthy.</p>
+
+  <div class="row">
+    <div><b>Status:</b> <span id="status">Loading…</span></div>
+    <label>Location
+      <select id="location" disabled></select>
+    </label>
+    <a id="book" target="_blank" rel="noopener">Book</a>
+  </div>
+
+  <div class="calwrap" id="cal" aria-live="polite">
+    <div class="calhdr">
+      <button id="prev" class="navbtn" aria-label="Previous Month">◀</button>
+      <div id="monthlabel">—</div>
+      <button id="next" class="navbtn" aria-label="Next Month">▶</button>
+    </div>
+    <div class="grid" id="grid"></div>
+  </div>
+
+  <pre id="times"></pre>
   <script type="module" src="/app.js"></script>
 </body>
 </html>
