--- a/index.html
+++ b/index.html
@@ -5,57 +5,90 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>DVDS Availability</title>
 <style>
-  :root{ --ink:#0b1320; --muted:#64748b; --ring:#e2e8f0; --brand:#34b16a; --bg:#f8fafc; }
-  body{ font-family: ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto; color:var(--ink); margin:24px; }
-  h1{ font-size: 2rem; margin:0 0 8px; }
-  .row{ display:flex; gap:12px; align-items:center; flex-wrap:wrap; }
-  select{ padding:10px 12px; border:1px solid var(--ring); border-radius:8px; font-size:1rem; }
-  #book{ display:none; margin-left:auto; text-decoration:none; padding:10px 14px; border-radius:10px; background:var(--brand); color:white; }
-  #status{ font-weight:700; margin:8px 0; }
-  .calwrap{ margin-top:16px; border:1px solid var(--ring); border-radius:14px; overflow:hidden; }
-  .calhdr{ display:flex; align-items:center; justify-content:space-between; padding:10px 12px; background:var(--bg); border-bottom:1px solid var(--ring); }
-  .navgroup{ display:flex; gap:8px; }
-  .navbtn{ border:1px solid var(--ring); background:white; border-radius:10px; padding:6px 10px; cursor:pointer; }
-  .navbtn:disabled{ opacity:.4; cursor:not-allowed; }
-  .grid{ display:grid; grid-template-columns:repeat(7,1fr); gap:1px; background:var(--ring); }
-  .dow,.cell{ background:white; padding:12px; min-height:72px; }
-  .dow{ font-size:.8rem; color:var(--muted); text-align:center; background:#f1f5f9; }
-  .cell{ position:relative; }
-  .date{ font-size:.95rem; color:var(--muted); }
-  .has{ position:absolute; right:10px; bottom:8px; font-size:.75rem; color:#16a34a; }
-  .muted{ color:#cbd5e1; }
-  .disabled{ color:#cbd5e1; pointer-events:none; }
-  .cell.clickable{ cursor:pointer; }
+  :root{
+    --ink:#0b1320; --muted:#6b7280; --ring:#e5e7eb; --bg:#f8fafc; --brand:#10b981; --brand-ink:#065f46;
+    --tile:#ffffff; --tile-muted:#f3f4f6; --tile-dark:#e5e7eb; --tile-hover:#f9fafb;
+  }
+  *{ box-sizing:border-box }
+  body{ margin:0; font-family: ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto; color:var(--ink); background:#fff; }
+  header{ padding:16px 20px; border-bottom:1px solid var(--ring); position:sticky; top:0; background:#fff; z-index:20; }
+  h1{ font-size:1.4rem; margin:0 0 6px }
+  .sub{ color:var(--muted); font-size:.95rem }
+  .toolbar{ display:flex; gap:12px; align-items:center; flex-wrap:wrap; margin-top:8px }
+  select{ padding:10px 12px; border:1px solid var(--ring); border-radius:10px; font-size:1rem; }
+  .status{ font-weight:700 }
+  .book{ padding:10px 14px; border-radius:12px; background:var(--brand); color:#fff; text-decoration:none; margin-left:auto; display:none }
+  .app{ display:grid; grid-template-columns: 1.4fr 1fr; gap:16px; padding:16px 20px }
+  @media (max-width: 980px){ .app{ grid-template-columns: 1fr; } .book{ order:3; margin-left:0; } }
+
+  /* Calendar */
+  .cal{ border:1px solid var(--ring); border-radius:16px; overflow:hidden; background:#fff }
+  .cal-hdr{ display:flex; justify-content:space-between; align-items:center; padding:12px 14px; background:var(--bg); border-bottom:1px solid var(--ring) }
+  .nav{ display:flex; gap:8px; align-items:center }
+  .navbtn{ border:1px solid var(--ring); background:#fff; border-radius:10px; padding:6px 10px; cursor:pointer }
+  .month{ font-weight:600 }
+  .grid{ display:grid; grid-template-columns:repeat(7,1fr); gap:1px; background:var(--ring) }
+  .dow,.cell{ background:#fff; min-height:90px; padding:12px }
+  .dow{ text-align:center; font-size:.85rem; color:var(--muted); background:#f3f4f6 }
+  .cell{ position:relative; transition:background .15s }
+  .cell.clickable:hover{ background:var(--tile-hover); cursor:pointer }
+  .date{ font-weight:600; font-size:.95rem }
+  .badge{ position:absolute; right:10px; bottom:10px; font-size:.75rem; color:var(--brand-ink) }
+  .past{ color:#9ca3af; background:var(--tile-dark) }
+  .empty{ background:var(--tile-muted); color:#9ca3af }
+  .disabled{ pointer-events:none }
+  .today{ outline:2px solid #d1fae5; outline-offset:-4px; border-radius:8px }
+  .active{ box-shadow:0 0 0 2px var(--brand) inset; border-radius:8px }
+
+  /* Times panel */
+  .panel{ border:1px solid var(--ring); border-radius:16px; overflow:hidden; background:#fff; display:flex; flex-direction:column; min-height:420px }
+  .panel-hdr{ display:flex; align-items:center; gap:10px; padding:12px 14px; background:#f9fafb; border-bottom:1px solid var(--ring) }
+  .panel-title{ font-weight:600 }
+  .panel-body{ padding:14px; }
+  .pills{ display:flex; flex-wrap:wrap; gap:10px }
+  .pill{ display:inline-block; padding:10px 14px; border:1px solid var(--ring); border-radius:12px; background:#fff; }
+  .emptymsg{ color:var(--muted) }
+  .sticky-actions{ margin-left:auto; display:flex; gap:8px }
   .skeleton{ background:linear-gradient(90deg,#f8fafc,#eef2f7,#f8fafc); background-size:200% 100%; animation:sh 1.2s infinite; }
   @keyframes sh{ 0%{background-position:0% 0;} 100%{background-position:200% 0;} }
-  #times{ margin-top:16px; border:1px dashed var(--ring); padding:16px; border-radius:12px; }
-  .pill{ display:inline-block; padding:10px 14px; border:1px solid var(--ring); border-radius:12px; margin:6px 8px 0 0; background:white; }
 </style>
 </head>
 <body>
-  <h1>DVDS Availability</h1>
-  <p>If the dropdown fills and availability renders, the Acuity APIs and JSON configs are healthy.</p>
-
-  <div class="row">
-    <div><b>Status:</b> <span id="status">Loading…</span></div>
-    <label>Location
-      <select id="location" disabled></select>
-    </label>
-    <a id="book" target="_blank" rel="noopener">Book</a>
-  </div>
-
-  <div class="calwrap" id="cal" aria-live="polite">
-    <div class="calhdr">
-      <div class="navgroup">
-        <button id="prev" class="navbtn" aria-label="Previous Month">◀</button>
-        <button id="next" class="navbtn" aria-label="Next Month">▶</button>
-      </div>
-      <div id="monthlabel">—</div>
+  <header>
+    <h1>DVDS Availability</h1>
+    <div class="sub">If the dropdown fills and availability renders, the Acuity APIs and JSON configs are healthy.</div>
+    <div class="toolbar">
+      <div><span class="status" id="status">Loading…</span></div>
+      <label>Location
+        <select id="location" disabled></select>
+      </label>
+      <a id="book" class="book" target="_blank" rel="noopener">Book</a>
     </div>
-    <div class="grid" id="grid"></div>
-  </div>
+  </header>
 
-  <div id="times"></div>
+  <main class="app">
+    <section class="cal" aria-live="polite">
+      <div class="cal-hdr">
+        <div class="nav">
+          <button id="prev" class="navbtn" aria-label="Previous Month">◀</button>
+          <button id="next" class="navbtn" aria-label="Next Month">▶</button>
+        </div>
+        <div id="monthlabel" class="month">—</div>
+      </div>
+      <div class="grid" id="grid"></div>
+    </section>
+
+    <aside class="panel">
+      <div class="panel-hdr">
+        <div id="paneltitle" class="panel-title">Select a day</div>
+        <div class="sticky-actions"><a id="book2" class="book" target="_blank" rel="noopener">Book</a></div>
+      </div>
+      <div class="panel-body">
+        <div id="times" class="pills"></div>
+      </div>
+    </aside>
+  </main>
+
   <script type="module" src="/app.js"></script>
 </body>
 </html>
