feat: surface package bundles under calendar

--- a/index.html
+++ b/index.html
@@ -51,6 +51,34 @@
   .pill{ display:inline-block; padding:10px 14px; border:1px solid var(--ring); border-radius:12px; background:#fff; }
   .emptymsg{ color:var(--muted) }
   .sticky-actions{ margin-left:auto; display:flex; gap:8px }
+  .package-section {
+    margin: 0 20px 32px 20px;
+    border-top: 1px solid var(--ring);
+    padding-top: 16px;
+  }
+  .package-title {
+    font-weight: 800;
+    font-size: 1.1rem;
+    margin-bottom: 12px;
+  }
+  .package-buttons {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+  }
+  .pkg-btn {
+    display: inline-block;
+    background: #0ea5e9;
+    color: #fff;
+    padding: 10px 14px;
+    border-radius: 10px;
+    text-decoration: none;
+    font-weight: 600;
+    transition: background 0.2s ease;
+  }
+  .pkg-btn:hover {
+    background: #0284c7;
+  }
 </style>
 </head>
 <body>
