fix: align package controls with calendar layout

--- a/index.html
+++ b/index.html
@@ -88,14 +88,14 @@
     <div class="toolbar">
       <div><span class="status" id="status">Loading…</span></div>
       <label>Location
-        <select id="location" disabled></select>
+        <select id="city-select" disabled></select>
       </label>
       <a id="book" class="book" target="_blank" rel="noopener">Book</a>
     </div>
   </header>
 
   <main class="app">
-    <section class="cal" aria-live="polite">
+    <section id="calendar-container" class="cal" aria-live="polite">
       <div class="cal-hdr">
         <div class="nav">
           <button id="prev" class="navbtn" aria-label="Previous Month">◀</button>
