feat(packages): add CTA panel without touching calendar logic

--- a/index.html
+++ b/index.html
@@ -64,6 +64,20 @@
       </label>
       <a id="book" class="book" target="_blank" rel="noopener">Book</a>
     </div>
+    <!-- DVDS: Steps + Packages (non-invasive) -->
+    <section id="dvds-steps-and-packages" style="margin:12px 0 0;">
+      <div id="dvds-steps" style="display:flex;gap:10px;align-items:center;flex-wrap:wrap;font-weight:800;">
+        <span style="opacity:.7;">1) Check availability</span>
+        <span style="opacity:.25;">•</span>
+        <span style="opacity:.7;">2) Pick a package</span>
+        <span style="opacity:.25;">•</span>
+        <span style="opacity:.7;">3) Book your times</span>
+      </div>
+
+      <div id="dvds-packages-panel" style="margin-top:10px;">
+        <!-- Buttons will be injected here by app.js -->
+      </div>
+    </section>
   </header>
 
   <main class="app">
