fix(ui): globally kill 'Book {City}' CTAs with class-based hide; safe to calendar logic

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 button[id*="book"],.book-location-btn{display:none!important;}
 @media(max-width:640px){.headline{font-size:1.25rem}.step{width:100%}.pkg-rail{grid-auto-columns:85%}}
 </style>
+<style>.kill-book-city{display:none !important}</style>
 </head>
 <body>
   <div class="ui-wrap" id="packages-flow">
