--- a/index.html
+++ b/index.html
@@ -53,39 +53,47 @@
   .sticky-actions{ margin-left:auto; display:flex; gap:8px }
 </style>
 <style>
-:root{--brand:#34b16a;--ink:#0b1320;--muted:#475569;--ring:#e2e8f0;--bg:#f8fafc;}
+:root{--brand:#34b16a;--brand-600:#28935a;--accent:#6366f1;--ink:#0b1320;--muted:#475569;--ring:#e2e8f0;--bg:#f8fafc;--chip:#eef2ff;}
 .ui-wrap{max-width:1200px;margin:16px auto;padding:0 16px;}
-.eyebrow{font-size:.85rem;color:var(--muted);margin-bottom:8px;}
-.headline{font-size:1.5rem;font-weight:800;margin:0 0 12px;color:var(--ink);}
-.steps{display:flex;gap:12px;flex-wrap:wrap;margin:8px 0 16px;}
-.step{display:flex;align-items:center;gap:8px;padding:10px 12px;border:1px solid var(--ring);border-radius:12px;background:#fff;font-weight:600;box-shadow:0 2px 10px rgba(15,23,42,.06);}
-.step small{font-weight:500;color:var(--muted);}
-.pkg-rail{display:grid;grid-auto-flow:column;grid-auto-columns:minmax(260px,1fr);gap:12px;overflow-x:auto;padding-bottom:6px;scroll-snap-type:x mandatory;}
-.pkg-card{scroll-snap-align:start;background:#fff;border:1px solid var(--ring);border-radius:16px;padding:14px;text-decoration:none;color:var(--ink);box-shadow:0 4px 16px rgba(15,23,42,.06);display:flex;flex-direction:column;gap:6px;}
-.pkg-title{font-weight:800;line-height:1.25;}
-.pkg-meta{font-size:.9rem;color:var(--muted);}
-.ribbons{display:flex;gap:8px;margin-top:4px;}
-.ribbon{font-size:.72rem;font-weight:700;padding:2px 8px;border-radius:999px;border:1px solid var(--ring);}
-.best{background:#f0f9ff;}
-.most{background:#f0fdf4;}
-.hint{margin-top:10px;padding:10px 12px;border:1px dashed var(--ring);border-radius:12px;background:var(--bg);color:var(--muted);font-size:.9rem;}
+.headline{font-size:1.6rem;font-weight:800;margin:0 0 12px;color:var(--ink);position:relative;}
+.headline:after{content:"";position:absolute;left:0;right:0;bottom:-10px;height:4px;background:linear-gradient(90deg,var(--brand),var(--accent));border-radius:999px;opacity:.35;}
+.steps{display:flex;gap:12px;flex-wrap:wrap;margin:20px 0 16px;}
+.step{display:flex;align-items:center;gap:8px;padding:10px 12px;border:1px solid var(--ring);border-radius:999px;background:#fff;font-weight:700;box-shadow:0 2px 10px rgba(15,23,42,.06);} .step small{font-weight:500;color:var(--muted);}
+.chip-row{display:flex;gap:10px;align-items:center;margin:6px 0 12px;}
+.chip{display:inline-flex;align-items:center;gap:8px;background:var(--chip);color:#1f2937;border:1px solid #e5e7eb;border-radius:999px;padding:6px 10px;font-weight:600;cursor:pointer;}
+.chip .dot{width:8px;height:8px;border-radius:999px;background:var(--accent);}
+.pkg-rail{display:grid;grid-auto-flow:column;grid-auto-columns:minmax(280px,1fr);gap:12px;overflow-x:auto;padding:8px 0;scroll-snap-type:x mandatory;}
+.pkg-card{scroll-snap-align:start;position:relative;background:#fff;border:1px solid var(--ring);border-radius:16px;padding:14px;text-decoration:none;color:var(--ink);box-shadow:0 4px 16px rgba(15,23,42,.06);display:flex;flex-direction:column;gap:6px;transition:transform .12s ease, box-shadow .12s ease;}
+.pkg-card:hover{transform:translateY(-2px);box-shadow:0 8px 28px rgba(15,23,42,.10);}
+.pkg-title{font-weight:900;line-height:1.25;}
+.pkg-meta{font-size:.92rem;color:var(--muted);} .ribbons{display:flex;gap:8px;margin-top:6px;}
+.ribbon{font-size:.72rem;font-weight:800;padding:2px 8px;border-radius:999px;border:1px solid var(--ring);} .best{background:#ecfeff;} .most{background:#ecfdf5;}
+.pkg-border{content:"";position:absolute;left:0;top:0;bottom:0;width:6px;border-top-left-radius:16px;border-bottom-left-radius:16px;}
+.border-ultimate{background:linear-gradient(180deg,#60a5fa,#818cf8);} .border-license{background:linear-gradient(180deg,#22c55e,#16a34a);} .border-early{background:linear-gradient(180deg,#f59e0b,#f97316);} .border-intro{background:linear-gradient(180deg,#c084fc,#a78bfa);} .border-express{background:linear-gradient(180deg,#f43f5e,#ef4444);}
+.hint{margin-top:10px;padding:10px 12px;border:1px dashed var(--ring);border-radius:12px;background:var(--bg);color:var(--muted);font-size:.92rem;}
 .calendar-shell{margin-top:18px;}
-button[id*="book"],.book-location-btn{display:none!important;}
-@media(max-width:640px){.headline{font-size:1.25rem}.step{width:100%}.pkg-rail{grid-auto-columns:85%}}
+button[id*="book"],.book-location-btn{display:none!important;} /* kill green Book {City} buttons visually */
+.kill-book-city{display:none!important}
+.cal-brand .month{background:linear-gradient(90deg,#f8fafc,#eef2ff);padding:6px 10px;border-radius:10px;font-weight:800;}
+.cal-brand .day--selected{outline:2px solid var(--brand);outline-offset:-2px;border-radius:10px;}
+@media(max-width:640px){.headline{font-size:1.3rem}.step{width:100%}.pkg-rail{grid-auto-columns:88%}}
 </style>
-<style>.kill-book-city{display:none !important}</style>
+
 </head>
 <body>
   <div class="ui-wrap" id="packages-flow">
-    <div class="eyebrow">DVDS Availability</div>
     <h2 class="headline">Pick a package to unlock your city’s lesson calendar</h2>
     <div class="steps" aria-label="How booking works">
-      <div class="step">1) Choose a package <small>best fit & price</small></div>
+      <div class="step">1) Choose a package <small>best fit &amp; price</small></div>
       <div class="step">2) Purchase securely <small>via Acuity</small></div>
       <div class="step">3) Return here to pick times <small>use this calendar</small></div>
     </div>
+    <div class="chip-row">
+      <div class="chip" id="change-location"><span class="dot"></span> Change location</div>
+      <div class="chip" id="current-city-chip" title="Current city">City: <span id="city-chip-name" style="font-weight:800;margin-left:6px">-</span></div>
+    </div>
     <div class="pkg-rail" id="pkg-rail" role="list"></div>
-    <p class="hint">Tip: After purchase, this page stays open. Select a date on the left and choose any available time for your city.</p>
+    <p class="hint" id="packages-hint">Tip: After purchase, this page stays open. Select a date on the left and choose any available time for your city.</p>
   </div>
 
   <div class="ui-wrap calendar-shell">
