fix(ui): zero-flash mobile-safe hide of 'Book {City}' CTAs; strict addCart links only; calendar logic untouched

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+<script>(function(){var st=document.createElement("style");st.textContent=".kill-book-city{display:none!important} button[id*=book],.book-location-btn{display:none!important}";document.head.appendChild(st);document.addEventListener("DOMContentLoaded",function(){var re=/^book\s+/i;var scan=function(root){root.querySelectorAll("button,a,[role=button]").forEach(function(el){var t=(el.textContent||"").replace(/\s+/g," ").trim();var l=(el.getAttribute("aria-label")||el.getAttribute("title")||"").trim();if(re.test(t)||re.test(l)){el.classList.add("kill-book-city");}});};scan(document);new MutationObserver(function(){scan(document)}).observe(document.documentElement,{childList:true,subtree:true});});})();</script>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>DVDS Availability</title>
@@ -98,6 +99,7 @@ button[id*="book"],.book-location-btn{display:none!important;} /* kill green Boo
 
   <div class="ui-wrap calendar-shell">
     <header>
+
       <h1>DVDS Availability</h1>
       <div class="sub">If the dropdown fills and availability renders, the Acuity APIs and JSON configs are healthy.</div>
       <div class="toolbar">
