--- a/index.html
+++ b/index.html
@@ -137,5 +137,6 @@ button[id*="book"],.book-location-btn{display:none!important;} /* kill green Boo
 
   <script src="./ui-packages.js"></script>
   <script type="module" src="/app.js"></script>
+<script src="./next-available.js"></script>
 </body>
 </html>
