feat(ui): add dom-based next-available advance with iframe fallback

--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@ button[id*="book"],.book-location-btn{display:none!important;} /* kill green Boo
 
   <script src="./ui-packages.js"></script>
   <script type="module" src="/app.js"></script>
-<script src="./next-available.js"></script>
+  <script src="/js/next-available.js"></script>
+  <script src="/js/next-available-fallback.js"></script>
 </body>
 </html>
