--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
   .toolbar{ display:flex; gap:12px; align-items:center; flex-wrap:wrap; margin-top:8px }
   select{ padding:10px 12px; border:1px solid var(--ring); border-radius:10px; font-size:1rem; }
   .status{ font-weight:700 }
-  .book{ padding:10px 14px; border-radius:12px; background:var(--brand); color:#fff; text-decoration:none; margin-left:auto; display:none }
   .app{ display:grid; grid-template-columns: 1.4fr 1fr; gap:16px; padding:16px 20px }
-  @media (max-width: 980px){ .app{ grid-template-columns: 1fr; } .book{ order:3; margin-left:0; } }
+  @media (max-width: 980px){ .app{ grid-template-columns: 1fr; } }
 
   /* Calendar */
   .cal{ border:1px solid var(--ring); border-radius:16px; overflow:hidden; background:#fff }
@@ -50,7 +49,6 @@
   .pills{ display:flex; flex-wrap:wrap; gap:10px }
   .pill{ display:inline-block; padding:10px 14px; border:1px solid var(--ring); border-radius:12px; background:#fff; }
   .emptymsg{ color:var(--muted) }
-  .sticky-actions{ margin-left:auto; display:flex; gap:8px }
 </style>
 </head>
 <body>
@@ -62,7 +60,6 @@
       <label>Location
         <select id="location" disabled></select>
       </label>
-      <a id="book" class="book" target="_blank" rel="noopener">Book</a>
     </div>
   </header>
 
@@ -81,7 +78,6 @@
     <aside class="panel">
       <div class="panel-hdr">
         <div id="paneltitle" class="panel-title">Select a day</div>
-        <div class="sticky-actions"><a id="book2" class="book" target="_blank" rel="noopener">Book</a></div>
       </div>
       <div class="panel-body">
         <div id="times" class="pills"></div>
