--- a/index.html
+++ b/index.html
@@ -14,11 +14,46 @@
   header{ padding:16px 20px; border-bottom:1px solid var(--ring); position:sticky; top:0; background:#fff; z-index:20; }
   h1{ font-size:1.4rem; margin:0 0 6px }
   .sub{ color:var(--muted); font-size:.95rem }
-  .toolbar{ display:flex; gap:12px; align-items:center; flex-wrap:wrap; margin-top:8px }
-  select{ padding:10px 12px; border:1px solid var(--ring); border-radius:10px; font-size:1rem; }
+  .toolbar{ display:flex; gap:16px; align-items:flex-start; flex-wrap:wrap; margin-top:8px }
+  .finder{ display:flex; flex-direction:column; gap:6px; min-width:280px; }
+  .finder-label{ font-weight:600; font-size:.95rem; }
+  .finder-box{ position:relative; display:flex; align-items:center; border:1px solid var(--ring); border-radius:12px; padding:4px 12px; background:#fff; }
+  .finder-input{ flex:1; border:0; font-size:1rem; padding:8px 4px; outline:none; min-width:0; }
+  .finder-input::placeholder{ color:var(--muted); }
+  .finder-input:disabled{ background:var(--tile-muted); cursor:not-allowed; color:#9ca3af; }
+  .finder-clear{ border:0; background:none; color:var(--muted); cursor:pointer; padding:4px; border-radius:8px; }
+  .finder-clear:hover{ color:var(--ink); background:rgba(15,23,42,0.06); }
+  .finder-clear:disabled{ opacity:.4; cursor:not-allowed; }
+  .finder-message{ color:var(--muted); font-size:.9rem; line-height:1.3; }
+  .finder-message.error{ color:#b91c1c; }
+  .finder-message.success{ color:var(--brand-ink); }
   .status{ font-weight:700 }
-  .app{ display:grid; grid-template-columns: 1.4fr 1fr; gap:16px; padding:16px 20px }
-  @media (max-width: 980px){ .app{ grid-template-columns: 1fr; } }
+  .app{ display:grid; grid-template-columns: minmax(0,1.5fr) minmax(0,1fr); gap:16px; padding:16px 20px; align-items:start }
+  .stack{ display:flex; flex-direction:column; gap:16px; min-width:0; }
+  .result{ border:1px solid var(--ring); border-radius:16px; background:#fff; padding:0; overflow:hidden; display:flex; flex-direction:column; gap:0; }
+  .result.hidden{ display:none; }
+  .result-card{ display:flex; flex-direction:column; gap:16px; padding:16px; }
+  .result-heading{ display:flex; flex-direction:column; gap:4px; }
+  .result-title{ font-weight:600; font-size:1.05rem; }
+  .result-sub{ color:var(--muted); font-size:.9rem; }
+  .result-actions{ display:flex; gap:12px; align-items:center; flex-wrap:wrap; }
+  .result-toggle{ border:1px solid var(--ring); background:#fff; border-radius:999px; padding:8px 16px; font-weight:600; cursor:pointer; }
+  .result-toggle:hover{ background:var(--bg); }
+  .result-error{ padding:16px; border-top:1px solid var(--ring); color:#b91c1c; background:#fef2f2; font-size:.95rem; line-height:1.4; }
+  .result-frame-wrap{ border-top:1px solid var(--ring); background:#f9fafb; }
+  .result-frame{ width:100%; min-height:640px; border:0; display:block; }
+  .result-card.collapsed + .result-frame-wrap{ display:none; }
+  @media (max-width: 980px){
+    .app{ grid-template-columns:1fr; }
+    .result{ order:-1; }
+    .result-frame-wrap{ margin:0 -20px; }
+    .result-frame{ min-height:720px; }
+  }
+  @media (max-width: 640px){
+    .finder{ width:100%; }
+    .finder-box{ padding:4px 10px; }
+    .result-frame{ min-height:680px; }
+  }
 
   .hidden{ display:none !important; }
 
@@ -73,38 +108,62 @@
     <h1>DVDS Availability</h1>
     <div class="toolbar">
       <div><span class="status" id="status">Loading…</span></div>
-      <label>Location
-        <select id="location" disabled></select>
-      </label>
+      <form id="finder" class="finder" autocomplete="off">
+        <label for="finder-input" class="finder-label">Find your city, ZIP, or address</label>
+        <div class="finder-box">
+          <input id="finder-input" class="finder-input" type="search" placeholder="Start typing…" enterkeyhint="search" />
+          <button id="finder-clear" class="finder-clear" type="button" aria-label="Clear search">✕</button>
+        </div>
+      </form>
     </div>
+    <div id="finder-message" class="finder-message">Search for your city or ZIP to load the correct scheduler.</div>
   </header>
 
   <main class="app">
-    <section class="cal" aria-live="polite">
-      <div class="cal-hdr">
-        <div class="nav">
-          <button id="prev" class="navbtn" aria-label="Previous Month">◀</button>
-          <button id="next" class="navbtn" aria-label="Next Month">▶</button>
-        </div>
-        <div id="monthlabel" class="month">—</div>
-      </div>
-      <div class="grid" id="grid"></div>
-    </section>
-
-    <aside class="panel">
-      <div class="panel-hdr">
-        <div id="paneltitle" class="panel-title">Select a day</div>
-      </div>
-      <div class="panel-body">
-        <div id="times" class="pills"></div>
-        <section id="packages" class="packages hidden" aria-live="polite">
-          <div>
-            <div class="packages-title">Packages</div>
-            <div id="packages-note" class="packages-note hidden"></div>
+    <div class="stack">
+      <section class="cal" aria-live="polite">
+        <div class="cal-hdr">
+          <div class="nav">
+            <button id="prev" class="navbtn" aria-label="Previous Month">◀</button>
+            <button id="next" class="navbtn" aria-label="Next Month">▶</button>
           </div>
-          <div id="packageGrid" class="package-grid"></div>
-        </section>
+          <div id="monthlabel" class="month">—</div>
+        </div>
+        <div class="grid" id="grid"></div>
+      </section>
+
+      <aside class="panel">
+        <div class="panel-hdr">
+          <div id="paneltitle" class="panel-title">Select a day</div>
+        </div>
+        <div class="panel-body">
+          <div id="times" class="pills"></div>
+          <section id="packages" class="packages hidden" aria-live="polite">
+            <div>
+              <div class="packages-title">Packages</div>
+              <div id="packages-note" class="packages-note hidden"></div>
+            </div>
+            <div id="packageGrid" class="package-grid"></div>
+          </section>
+        </div>
+      </aside>
+    </div>
+
+    <aside id="result" class="result hidden" aria-live="polite">
+      <div id="result-card" class="result-card">
+        <div class="result-heading">
+          <div id="result-title" class="result-title"></div>
+          <div id="result-sub" class="result-sub"></div>
+        </div>
+        <div class="result-actions">
+          <button id="result-toggle" class="result-toggle" type="button">Collapse calendar</button>
+          <a id="result-link" class="package-cta" href="#" target="_blank" rel="noopener">Open scheduler ↗</a>
+        </div>
       </div>
+      <div class="result-frame-wrap">
+        <iframe id="result-frame" class="result-frame" title="Acuity scheduling" loading="lazy" allowtransparency="true"></iframe>
+      </div>
+      <div id="result-error" class="result-error hidden"></div>
     </aside>
   </main>
 
