--- a/index.html
+++ b/index.html
@@ -28,31 +28,14 @@
   .finder-message.error{ color:#b91c1c; }
   .finder-message.success{ color:var(--brand-ink); }
   .status{ font-weight:700 }
-  .app{ display:grid; grid-template-columns: minmax(0,1.5fr) minmax(0,1fr); gap:16px; padding:16px 20px; align-items:start }
+  .app{ display:grid; grid-template-columns: minmax(0,1fr); gap:16px; padding:16px 20px; align-items:start }
   .stack{ display:flex; flex-direction:column; gap:16px; min-width:0; }
-  .result{ border:1px solid var(--ring); border-radius:16px; background:#fff; padding:0; overflow:hidden; display:flex; flex-direction:column; gap:0; }
-  .result.hidden{ display:none; }
-  .result-card{ display:flex; flex-direction:column; gap:16px; padding:16px; }
-  .result-heading{ display:flex; flex-direction:column; gap:4px; }
-  .result-title{ font-weight:600; font-size:1.05rem; }
-  .result-sub{ color:var(--muted); font-size:.9rem; }
-  .result-actions{ display:flex; gap:12px; align-items:center; flex-wrap:wrap; }
-  .result-toggle{ border:1px solid var(--ring); background:#fff; border-radius:999px; padding:8px 16px; font-weight:600; cursor:pointer; }
-  .result-toggle:hover{ background:var(--bg); }
-  .result-error{ padding:16px; border-top:1px solid var(--ring); color:#b91c1c; background:#fef2f2; font-size:.95rem; line-height:1.4; }
-  .result-frame-wrap{ border-top:1px solid var(--ring); background:#f9fafb; }
-  .result-frame{ width:100%; min-height:640px; border:0; display:block; }
-  .result-card.collapsed + .result-frame-wrap{ display:none; }
   @media (max-width: 980px){
     .app{ grid-template-columns:1fr; }
-    .result{ order:-1; }
-    .result-frame-wrap{ margin:0 -20px; }
-    .result-frame{ min-height:720px; }
   }
   @media (max-width: 640px){
     .finder{ width:100%; }
     .finder-box{ padding:4px 10px; }
-    .result-frame{ min-height:680px; }
   }
 
   .hidden{ display:none !important; }
@@ -116,7 +99,7 @@
         </div>
       </form>
     </div>
-    <div id="finder-message" class="finder-message">Search for your city or ZIP to load the correct scheduler.</div>
+    <div id="finder-message" class="finder-message">Search for your city or ZIP to view the packages available in your area.</div>
   </header>
 
   <main class="app">
@@ -148,23 +131,6 @@
         </div>
       </aside>
     </div>
-
-    <aside id="result" class="result hidden" aria-live="polite">
-      <div id="result-card" class="result-card">
-        <div class="result-heading">
-          <div id="result-title" class="result-title"></div>
-          <div id="result-sub" class="result-sub"></div>
-        </div>
-        <div class="result-actions">
-          <button id="result-toggle" class="result-toggle" type="button">Collapse calendar</button>
-          <a id="result-link" class="package-cta" href="#" target="_blank" rel="noopener">Open scheduler ↗</a>
-        </div>
-      </div>
-      <div class="result-frame-wrap">
-        <iframe id="result-frame" class="result-frame" title="Acuity scheduling" loading="lazy" allowtransparency="true"></iframe>
-      </div>
-      <div id="result-error" class="result-error hidden"></div>
-    </aside>
   </main>
 
   <script type="module" src="/app.js"></script>
