docs: set embed snippet to vercel host

--- a/embed-snippet.html
+++ b/embed-snippet.html
@@ -179,9 +179,9 @@
 
   <script
     type="module"
-    src="https://your-host/app.js"
+    src="https://dvds-availability-git-code-check-0e5b75b-austs-projects-6e0f2020.vercel.app/app.js"
     data-dvds-app
-    data-api-base="https://your-host"
+    data-api-base="https://dvds-availability-git-code-check-0e5b75b-austs-projects-6e0f2020.vercel.app"
     data-google-key="AIzaSyDaWETRTN-h4vvkf-borA7ZYzZgCqigRjo"></script>
 </body>
 </html>
