fix: relax sticky header on mobile

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     .two-col{ grid-template-columns:1fr; }
   }
   @media (max-width: 640px){
+    header{ position:static; top:auto; }
     .finder-box{ padding:4px 10px; }
     .step-section{ padding:16px; }
   }
