--- a/embed-snippet.html
+++ b/embed-snippet.html
@@ -43,7 +43,7 @@
     .step-body{ display:flex; flex-direction:column; gap:16px; }
     .two-col{ display:grid; grid-template-columns: minmax(0,1.1fr) minmax(0,1fr); gap:20px; align-items:start; }
     @media (max-width: 980px){ .two-col{ grid-template-columns:1fr; } }
-    @media (max-width: 640px){ .finder-box{ padding:4px 10px; } .step-section{ padding:16px; } }
+    @media (max-width: 640px){ header{ position:static; top:auto; } .finder-box{ padding:4px 10px; } .step-section{ padding:16px; } }
     .hidden{ display:none !important; }
     .cal{ border:1px solid var(--ring); border-radius:16px; overflow:hidden; background:#fff }
     .cal-hdr{ display:flex; justify-content:space-between; align-items:center; padding:12px 14px; background:var(--bg); border-bottom:1px solid var(--ring) }
