--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   }
   *{ box-sizing:border-box }
   body{ margin:0; font-family: ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto; color:var(--ink); background:#fff; }
-  header{ padding:20px 20px 10px; border-bottom:1px solid var(--ring); position:sticky; top:0; background:#fff; z-index:20; }
+  header{ padding:20px 20px 10px; border-bottom:1px solid var(--ring); background:#fff; }
   h1{ font-size:1.6rem; margin:0 0 4px }
   .sub{ color:var(--muted); font-size:.95rem }
   .steps-intro{ margin:14px 0 0; display:flex; flex-direction:column; gap:6px; }
@@ -47,7 +47,6 @@
     .two-col{ grid-template-columns:1fr; }
   }
   @media (max-width: 640px){
-    header{ position:static; top:auto; }
     .finder-box{ padding:4px 10px; }
     .step-section{ padding:16px; }
   }
