--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
   .finder-message{ color:var(--muted); font-size:.9rem; line-height:1.3; }
   .finder-message.error{ color:#b91c1c; }
   .finder-message.success{ color:var(--brand-ink); }
+  .finder-alert{ margin-top:4px; padding:12px 14px; border-radius:12px; background:#fef3c7; border:1px solid #fcd34d; color:#92400e; font-size:.9rem; line-height:1.35; }
+  .finder-alert.hidden{ display:none; }
   .status{ font-weight:700 }
   .app{ display:flex; flex-direction:column; gap:24px; padding:20px 20px 40px; }
   .step-section{ border:1px solid var(--ring); border-radius:18px; padding:20px; background:#fff; display:flex; flex-direction:column; gap:16px; transition:border-color .2s, box-shadow .2s; }
@@ -135,6 +137,7 @@
           </div>
         </form>
         <div id="finder-message" class="finder-message">Search for your city or ZIP to view the packages available in your area.</div>
+        <div id="finder-phoenix" class="finder-alert hidden" role="alert">Phoenix addresses require a ZIP code. Please enter a ZIP to continue.</div>
       </div>
     </section>
 
@@ -143,7 +146,7 @@
         <div class="step-num">2</div>
         <div class="step-meta">
           <div class="step-title">Check availability</div>
-          <div class="step-desc">Browse upcoming lesson openings and pick the day that works best for you.</div>
+          <div class="step-desc">Browse upcoming lesson openings and view the days that work best for you.</div>
         </div>
       </div>
       <div class="step-body two-col">
@@ -160,7 +163,7 @@
         </section>
         <aside class="panel">
           <div class="panel-hdr">
-            <div id="paneltitle" class="panel-title">Select a day</div>
+            <div id="paneltitle" class="panel-title">View available times</div>
           </div>
           <div class="panel-body">
             <div id="times" class="pills"></div>
