chore: clarify finder placeholder copy

--- a/embed-snippet.html
+++ b/embed-snippet.html
@@ -119,7 +119,7 @@
         <form id="finder" class="finder" autocomplete="off">
           <label for="finder-input" class="finder-label">Find your city, ZIP, or address</label>
           <div class="finder-box">
-            <input id="finder-input" class="finder-input" type="search" placeholder="Start typing…" enterkeyhint="search" />
+            <input id="finder-input" class="finder-input" type="search" placeholder="Please enter your address or ZIP here" enterkeyhint="search" />
             <button id="finder-clear" class="finder-clear" type="button" aria-label="Clear search">✕</button>
           </div>
         </form>
