--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
   .nav{ display:flex; gap:8px; align-items:center }
   .navbtn{ border:1px solid var(--ring); background:#fff; border-radius:10px; padding:6px 10px; cursor:pointer }
   .month{ font-weight:600 }
-  .grid{ display:grid; grid-template-columns:repeat(7,1fr); gap:1px; background:var(--ring) }
-  .dow,.cell{ background:#fff; min-height:90px; padding:12px }
+  .grid{ display:grid; grid-template-columns:repeat(7,minmax(0,1fr)); gap:1px; background:var(--ring) }
+  .dow,.cell{ background:#fff; min-height:90px; padding:12px; min-width:0 }
   .dow{ text-align:center; font-size:.85rem; color:var(--muted); background:#f3f4f6 }
   .cell{ position:relative; transition:background .15s }
   .cell.clickable:hover{ background:var(--tile-hover); cursor:pointer }
